--- a/app/partials/Personal/MasterDataMaterial.html
+++ b/app/partials/Personal/MasterDataMaterial.html
@@ -38,7 +38,7 @@
 					
 					<div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
 					
-					<div class="col-lg-6 col-xs-12 col-sm-12 col-md-6">
+					<div style="text-align:-webkit-center">
                                 <div class="chart" ui-jq="easyPieChart" ui-options="{
                       easing: 'easeOutBounce',
                       barColor: '{{app.color.accent}}',
