--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -51,7 +51,7 @@
                                     </div>
 									
                                 </div>
-                                <h4 class="text-center margin-top-10 margin-bottom-10" style  >Matching Count</h4>
+                                <h4 class="text-center margin-top-10 margin-bottom-10"  >Matching Count</h4>
                             </div>
 					
                     </div>    
