--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -1,4 +1,4 @@
-<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Smart Table';">
+<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Sales Order';">
     <div class="col-lg-12" ng-controller="DataTablesCtrl">
         
 					
