--- a/app/partials/Personal/SalesOderTable.html
+++ b/app/partials/Personal/SalesOderTable.html
@@ -1,4 +1,4 @@
-<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Smart Table';">
+<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Sales Order Per Hour';">
     <div class="col-lg-12" ng-controller="SalesOrderController">
         <section class="box ">
             <header class="panel_header">
