--- a/app/partials/Personal/MasterDataMaterial.html
+++ b/app/partials/Personal/MasterDataMaterial.html
@@ -143,13 +143,14 @@
                            </tfoot>
 					
                         </table>
-						
+						<div>
 						<dir-pagination-controls
 							   max-size="10"
 							   direction-links="true"
 							   boundary-links="true"
 								auto-hide="true" >
 							</dir-pagination-controls>
+							</div>
                     </div>
 					
 					
