--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -105,7 +105,7 @@
 					
                     <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
                         
-						
+						<!--
 						<table class="table table-striped" ui-jq="footable" data-filter="#filter" data-page-size="10" class="table table-striped">
                             <thead>
                                 <tr>
@@ -146,8 +146,52 @@
                                 </tr>
                             </tfoot>
                         </table>
+						-->
 						
+						<table class="table table-striped" ui-jq="footable" data-filter="#filter" class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th data-toggle="true">
+                                        Interface Name
+                                    </th>
+                                    <th>
+                                        Records in MYSQL
+                                    </th>
+                                    <th data-hide="phone,tablet">
+                                        File Count
+                                    </th>
+                                    <th data-hide="phone">
+                                        Status
+                                    </th>
+                                </tr>
+                            </thead>
+							
+                            
+							<tbody>
+                                <tr    dir-paginate="x in mdRecordsArray | itemsPerPage:5" >
+                                    <td>{{ x.Entry1 }}</td>
+									<td>{{ x.Entry2 }}</td>
+									<td>{{ x.Entry3 }}</td>
+									<td><span ng-class="{false : 'label label-danger', true : 'label label-success' } [x.Entry2==x.Entry3] " >{{ (x.Entry2!=x.Entry3) ? "Not Synced" : "Synced" }}</span></td>
+
+									
+                                </tr>
+                                </tr>
+                                
+                            </tbody>
+							
+                            
+                        </table>
 						
+						<div>
+						<dir-pagination-controls
+							   max-size="5"
+							   direction-links="true"
+							   boundary-links="true"
+								auto-hide="true" >
+							</dir-pagination-controls>
+						
+						</div>
                     </div>
 					
 					
