--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -59,7 +59,56 @@
 					
 					
                 </div>
+				<div class="clearfix"></div>
 				
+				<div style="text-align:-webkit-center">
+				
+				
+				<table class="table table-striped" ui-jq="footable" data-filter="#filter" data-page-size="10" class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th data-toggle="true">
+                                        Source
+                                    </th>
+                                    <th>
+                                        Sales Order Number
+                                    </th>
+                                    <th data-hide="phone,tablet">
+                                        File Count
+                                    </th>
+                                    <th data-hide="phone">
+                                        Status
+                                    </th>
+                                </tr>
+                            </thead>
+							
+                            
+							<tbody>
+                                <tr  ng-repeat="x in mdRecordsArray " >
+                                    <td>{{ x.Entry1 }}</td>
+									<td>{{ x.Entry2 }}</td>
+									<td>{{ x.Entry3 }}</td>
+									<td><span ng-class="{false : 'label label-danger', true : 'label label-success' } [x.Entry2==x.Entry3] " >{{ (x.Entry2!=x.Entry3) ? "Not Synced" : "Synced" }}</span></td>
+
+									
+                                </tr>
+                                </tr>
+                                
+                            </tbody>
+							
+                            <tfoot class="hide-if-no-paging">
+                                <tr>
+                                    <td colspan="10" class="text-center">
+                                        <ul class="pagination"></ul>
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
+				
+				
+				</div>
+				
+				<div class="clearfix"></div>
 				<div class="row">
                     <div  class="col-md-8 col-sm-12 col-xs-12 col-md-offset-2"  >
                      <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" 
