--- a/app/partials/Personal/MasterDataMaterial.html
+++ b/app/partials/Personal/MasterDataMaterial.html
@@ -148,7 +148,7 @@
 							   max-size="10"
 							   direction-links="true"
 							   boundary-links="true"
-								auto-hide="true" >
+								> <!-- auto-hide="true" --> 
 							</dir-pagination-controls>
 							</div>
                     </div>
