--- a/app/partials/Personal/SalesOderTable.html
+++ b/app/partials/Personal/SalesOderTable.html
@@ -22,36 +22,37 @@
   		<!-- <md-datepicker ng-model="DeliveryDate" md-placeholder="Enter date"></md-datepicker> -->
   		 &nbsp;  &nbsp;
   		<button class="btn btn-primary btn-sm" ng-click="postMessage()"   >Call Web Service</button>
-		
+		<div class="clearfix"></div>
+		<div class="clearfix"></div>
 		<br>
   		<br>
 		
 		<table class="table table-bordered table-striped" >
   		<tr>
-  		<td>System</td>
-    	<td>Date</td>
+  		<td><b>System</b></td>
+    	<td><b>Date</b></td>
     	
-    	<td>00-04</td>
-    	<td>05</td>
-    	<td>06</td>
-    	<td>07</td>
-    	<td>08</td>
-    	<td>09</td>
-    	<td>10</td>
-    	<td>11</td>
-    	<td>12</td>
-    	<td>13</td>
-    	<td>14</td>
-    	<td>15</td>
-    	<td>16</td>
-    	<td>17</td>
-    	<td>18</td>
-    	<td>19</td>
-    	<td>20</td>
-    	<td>21</td>
-    	<td>22</td>
-    	<td>23</td>
-    	<td>Total</td>
+    	<td><b>00-04</b></td>
+    	<td><b>05</b></td>
+    	<td><b>06</b></td>
+    	<td><b>07</b></td>
+    	<td><b>08</b></td>
+    	<td><b>09</b></td>
+    	<td><b>10</b></td>
+    	<td><b>11</b></td>
+    	<td><b>12</b></td>
+    	<td><b>13</b></td>
+    	<td><b>14</b></td>
+    	<td><b>15</b></td>
+    	<td><b>16</b></td>
+    	<td><b>17</b></td>
+    	<td><b>18</b></td>
+    	<td><b>19</b></td>
+    	<td><b>20</b></td>
+    	<td><b>21</b></td>
+    	<td><b>22</b></td>
+    	<td><b>23</b></td>
+    	<td><b>Total</b></td>
     	
   		</tr>
   		<tr ng-repeat="x in salesOrderArray   " > <!--  | filter:{Var1: idocNumber } | filter: (syncResultBool === true ? filter2 : '')  | groupBy: 'Var1'   / filter: filter2 -->
