--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -30,21 +30,48 @@
                                 </li>
 								
 								<li ui-sref-active="active">
-                                    <a ui-sref="app.tables.md2">MD Customers</a>
+                                    <a>MD Customers<span class="arrow material-icons">keyboard_arrow_right</span></a>
+                                    <ul class="wraplist wraplist-sub sub-menu dk" >
+
+                                        <li ui-sref-active="active">
+                                            <a ui-sref="app.tables.customer1" >SAP & MySQL</a>
+                                        </li>
+                                        <li ui-sref-active="active">
+                                            <a ui-sref="app.tables.customer2" >MySQL & Bolton</a>
+                                        </li>
+                                    </ul>
                                 </li>
+								
+
 								
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.md2">MD Equipments</a>
                                 </li>
 								
+								
+								
 								<li ui-sref-active="active">
-                                    <a ui-sref="app.tables.md2">MD Pricing</a>
+                                    <a>MD Pricing<span class="arrow material-icons">keyboard_arrow_right</span></a>
+                                    <ul class="wraplist wraplist-sub sub-menu dk" >
+
+                                        <li ui-sref-active="active">
+                                            <a ui-sref="app.tables.md1" >SAP & MySQL</a>
+                                        </li>
+                                        <li ui-sref-active="active">
+                                            <a ui-sref="app.tables.md2" >MySQL & Bolton</a>
+                                        </li>
+                                    </ul>
                                 </li>
+								
+								
                                 
                                 
                             </ul>
                         </li>
     </li>
+	
+	
+	
 	
 	<li href class="auto"> 
                             <a href="javascript:;">
