--- a/app/partials/components/leftbar.html
+++ b/app/partials/components/leftbar.html
@@ -4,14 +4,14 @@
     <!-- USER INFO - START -->
     <div class="profile-info" ng-show="app.settings.menuProfile">
         <div class="profile-image col-md-12 col-sm-12 col-xs-12 text-center">
-            <a ui-sref="app.ui.profile">
+            <a ui-sref="#">
                 <img src="data/members/Avaxia2.png" class="img-responsive">
                 <span class="profile-status available"></span>
             </a>
         </div>
         <div class="profile-details col-md-12 col-sm-12 col-xs-12">
             <h3>
-                    <a ui-sref="app.ui.profile">AVAXIA</a>
+                    <a ui-sref="#">AVAXIA</a>
 
                     <!-- Available statuses: online, idle, busy, away and offline -->
                 </h3>
