--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -55,7 +55,7 @@
                                     <ul class="wraplist wraplist-sub sub-menu dk" >
 
                                         <li ui-sref-active="active">
-                                            <a ui-sref="app.tables.md1" >SAP & MySQL</a>
+                                            <a ui-sref="app.tables.pricing" >SAP & MySQL</a>
                                         </li>
                                         <li ui-sref-active="active">
                                             <a ui-sref="app.tables.md2" >MySQL & Bolton</a>
