--- a/app/partials/Personal/CustomerMD.html
+++ b/app/partials/Personal/CustomerMD.html
@@ -1,5 +1,5 @@
 <div class='content-wrapper' ng-init="app.settings.pagetitle = 'Compare SAP & MySQL';">
-    <div class="col-lg-12" ng-controller="MasterDataController">
+    <div class="col-lg-12" ng-controller="CustomerController">
         
 					
 					
@@ -7,7 +7,7 @@
 					<div class="col-lg-12">
         <section class="box ">
             <header class="panel_header">
-                <h2 class="title pull-left">Master Data Materials</h2>
+                <h2 class="title pull-left">Master Data Customer</h2>
                 <div class="actions panel_actions pull-right">
                     <i class="box_toggle material-icons">expand_more</i>
                     
