--- a/app/partials/Personal/PricingMD.html
+++ b/app/partials/Personal/PricingMD.html
@@ -7,7 +7,7 @@
 					<div class="col-lg-12">
         <section class="box ">
             <header class="panel_header">
-                <h2 class="title pull-left">Master Data - MySQL & Bolton</h2>
+                <h2 class="title pull-left">Master Data - Pricing</h2>
                 <div class="actions panel_actions pull-right">
                     <i class="box_toggle material-icons">expand_more</i>
                     
@@ -73,7 +73,7 @@
 	<div class="col-lg-12">
         <section class="box ">
             <header class="panel_header">
-                <h2 class="title pull-left">Master Data</h2>
+                <h2 class="title pull-left">Details</h2>
                 <div class="actions panel_actions pull-right">
                     <i class="box_toggle material-icons">expand_more</i>
                     
@@ -168,7 +168,7 @@
 							
                             
 							<tbody>
-                                <tr    dir-paginate="x in mdRecordsArray | itemsPerPage:5" >
+                                <tr    dir-paginate="x in mdRecordsArray | itemsPerPage:7" >
                                     <td>{{ x.Entry1 }}</td>
 									<td>{{ x.Entry2 }}</td>
 									<td>{{ x.Entry3 }}</td>
@@ -185,7 +185,7 @@
 						
 						<div>
 						<dir-pagination-controls
-							   max-size="5"
+							   max-size="7"
 							   direction-links="true"
 							   boundary-links="true"
 								 >
