--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -16,6 +16,8 @@
                                 <span class="arrow material-icons">keyboard_arrow_right</span>
                             </a>
                             <ul class="wraplist wraplist-sub sub-menu dk" >
+							
+							<!--
                                 <li ui-sref-active="active">
                                     <a>MD Materials<span class="arrow material-icons">keyboard_arrow_right</span></a>
                                     <ul class="wraplist wraplist-sub sub-menu dk" >
@@ -41,13 +43,34 @@
                                         </li>
                                     </ul>
                                 </li>
-								
+								-->
 
-								
 								<li ui-sref-active="active">
-                                    <a ui-sref="app.tables.md2">MD Equipments</a>
+                                    <a ui-sref="app.tables.md1">MD Materials</a>
                                 </li>
 								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.customer1" >MD Customer</a>
+                                </li>
+								
+								<li ui-sref-active="active">
+                                            <a ui-sref="app.tables.pricing" >Pricing</a>
+                                        </li>
+								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.dashboard">MD Equipments</a>
+                                </li>
+								
+								
+								
+								<li ui-sref-active="active">
+                                            <a ui-sref="app.tables.md2" >Compare MySQL & Bolton</a>
+                                </li>
+								
+								
+								
+								
+							<!--	
 								
 								
 								<li ui-sref-active="active">
@@ -63,7 +86,7 @@
                                     </ul>
                                 </li>
 								
-								
+							-->	
                                 
                                 
                             </ul>
