--- a/app/partials/Personal/CustomerMD.html
+++ b/app/partials/Personal/CustomerMD.html
@@ -119,7 +119,7 @@
                                         Date
                                     </th>
                                     <th data-hide="phone,tablet" >
-                                        Customer 
+                                        Customer Number
                                     </th>
                                     <th data-hide="phone">
                                         Status
