--- a/app/partials/Personal/PricingMD.html
+++ b/app/partials/Personal/PricingMD.html
@@ -7,7 +7,7 @@
 					<div class="col-lg-12">
         <section class="box ">
             <header class="panel_header">
-                <h2 class="title pull-left">Master Data - Pricing</h2>
+                <h2 class="title pull-left">Master Data - Pricing ( Date : 2017/07/25 )</h2>
                 <div class="actions panel_actions pull-right">
                     <i class="box_toggle material-icons">expand_more</i>
                     
@@ -103,7 +103,11 @@
                     <div class="clearfix"></div>
 					<br>
 					
+					
+					
                     <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
+					
+					
                         
 						<!--
 						<table class="table table-striped" ui-jq="footable" data-filter="#filter" data-page-size="10" class="table table-striped">
