--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -7,7 +7,7 @@
 					<div class="col-lg-12">
         <section class="box ">
             <header class="panel_header">
-                <h2 class="title pull-left">Master Data - MySQL & Bolton</h2>
+                <h2 class="title pull-left">Master Data - MySQL & Bolton ( Date : 2017/07/25 ) </h2>
                 <div class="actions panel_actions pull-right">
                     <i class="box_toggle material-icons">expand_more</i>
                     
