--- a/app/partials/Personal/CustomerMD.html
+++ b/app/partials/Personal/CustomerMD.html
@@ -106,7 +106,7 @@
 					<br>
 					
                     <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
-                        <table class="table table-striped" ui-jq="footable" data-filter="#filter" class="table table-striped">
+                        <table class="table table-striped" data-filter="#filter" class="table table-striped">
                             <thead>
                                 <tr>
                                     <th data-toggle="true">
