--- a/app/partials/Personal/MasterDataMaterial.html
+++ b/app/partials/Personal/MasterDataMaterial.html
@@ -106,7 +106,7 @@
 					<br>
 					
                     <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
-                        <table class="table table-striped" ui-jq="footable" data-filter="#filter" class="table table-striped">
+                        <table class="table table-striped" data-filter="#filter" class="table table-striped">
                             <thead>
                                 <tr>
                                     <th data-toggle="true">
@@ -127,7 +127,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr dir-paginate="x in mdRecordsArray|filter:{ Entry5 : filterResult }|itemsPerPage:15" >
+                                <tr dir-paginate="x in mdRecordsArray|filter:{ Entry5 : filterResult }|itemsPerPage:10" >
                                     <td>{{ x.Entry2 }}</td>
 									<td>{{ x.Entry3 == "/CCEJ/MATMAS" ? "Material" : x.Entry3 }}</td>
 									<td>{{ x.Entry1 }}</td>
