--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -148,7 +148,7 @@
                         </table>
 						-->
 						
-						<table class="table table-striped" ui-jq="footable" data-filter="#filter" class="table table-striped">
+						<table class="table table-striped" data-filter="#filter" class="table table-striped">
                             <thead>
                                 <tr>
                                     <th data-toggle="true">
