--- a/app/partials/Personal/MasterDataMaterial.html
+++ b/app/partials/Personal/MasterDataMaterial.html
@@ -104,7 +104,8 @@
 					
                     <div class="clearfix"></div>
 					<br>
-					
+					<button ng-click="exportData()">Export</button>
+					<br />
                     <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
                         <table class="table table-striped" data-filter="#filter" class="table table-striped">
                             <thead>
