--- a/app/partials/Personal/MasterDataMaterial.html
+++ b/app/partials/Personal/MasterDataMaterial.html
@@ -104,7 +104,11 @@
 					
                     <div class="clearfix"></div>
 					<br>
-					<button ng-click="exportData()">Export</button>
+					
+					<a class="btn btn-circle btn-lg pull-right btn-success" ng-click="exportData()" >CSV    <i class='fa fa-file-excel-o icon-4x' /></a>
+					
+					
+					
 					<br />
                     <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
                         <table class="table table-striped" data-filter="#filter" class="table table-striped">
