--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -103,6 +103,8 @@
                     <div class="clearfix"></div>
 					<br>
 					
+					<a class="btn btn-circle btn-lg pull-right btn-success" ng-click="exportData()" >CSV    <i class='fa fa-file-excel-o icon-4x' /></a>
+					
                     <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
                         
 						<!--
