--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -17,20 +17,21 @@
                             </a>
                             <ul class="wraplist wraplist-sub sub-menu dk" >
 							
-							<!--
+							
                                 <li ui-sref-active="active">
                                     <a>MD Materials<span class="arrow material-icons">keyboard_arrow_right</span></a>
                                     <ul class="wraplist wraplist-sub sub-menu dk" >
 
                                         <li ui-sref-active="active">
-                                            <a ui-sref="app.tables.md1" >SAP & MySQL</a>
+                                            <a ui-sref="app.tables.md1" >Daily</a>
                                         </li>
                                         <li ui-sref-active="active">
-                                            <a ui-sref="app.tables.md2" >MySQL & Bolton</a>
-                                        </li>
+                                    <a ui-sref="app.tables.MaterialPreviousDay">Previous Day</a>
+                                </li>
                                     </ul>
                                 </li>
 								
+								<!--
 								<li ui-sref-active="active">
                                     <a>MD Customers<span class="arrow material-icons">keyboard_arrow_right</span></a>
                                     <ul class="wraplist wraplist-sub sub-menu dk" >
@@ -43,11 +44,12 @@
                                         </li>
                                     </ul>
                                 </li>
-								-->
+								
 
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.md1">MD Materials</a>
                                 </li>
+								-->
 								
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.customer1" >MD Customer</a>
