--- a/app/partials/Personal/PreviousDay_Material.html
+++ b/app/partials/Personal/PreviousDay_Material.html
@@ -1,5 +1,5 @@
 <div class='content-wrapper' ng-init="app.settings.pagetitle = 'Compare SAP & MySQL';">
-    <div class="col-lg-12" ng-controller="MasterDataController">
+    <div class="col-lg-12" ng-controller="PreviousDayMaterialController">
         
 					
 			
