--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -31,6 +31,19 @@
                                     </ul>
                                 </li>
 								
+								<li ui-sref-active="active">
+                                    <a>MD Customer<span class="arrow material-icons">keyboard_arrow_right</span></a>
+                                    <ul class="wraplist wraplist-sub sub-menu dk" >
+
+                                        <li ui-sref-active="active">
+                                            <a ui-sref="app.tables.customer1" >Daily</a>
+                                        </li>
+                                        <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.CustomerPreviousDay">Previous Day</a>
+                                </li>
+                                    </ul>
+                                </li>
+								
 								<!--
 								<li ui-sref-active="active">
                                     <a>MD Customers<span class="arrow material-icons">keyboard_arrow_right</span></a>
@@ -49,11 +62,12 @@
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.md1">MD Materials</a>
                                 </li>
-								-->
+								
 								
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.customer1" >MD Customer</a>
                                 </li>
+								-->
 								
 								<li ui-sref-active="active">
                                             <a ui-sref="app.tables.pricing" >Pricing</a>
