--- a/app/partials/Personal/Error_Bolton.html
+++ b/app/partials/Personal/Error_Bolton.html
@@ -1,71 +1,11 @@
 <div class='content-wrapper' ng-init="app.settings.pagetitle = 'Compare MYSQL & Bolton';">
-	<div class="col-lg-12" ng-controller="MasterDataBoltonController" ng-init='load()' >
+	<div class="col-lg-12" ng-controller="ErrorDetailsController"  >
 
 
 
 
 		<div class="col-lg-12">
-			<section class="box ">
-				<header class="panel_header">
-					<h2 class="title pull-left">Master Data - MySQL & Bolton ( Date : 2017/07/25 ) </h2>
-					<div class="actions panel_actions pull-right">
-						<i class="box_toggle material-icons">expand_more</i>
-
-					</div>
-				</header>
-				<div class="content-body padding-bottom-0">
-					<div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
-						<div class="tile-counter bg-primary">
-							<div class="content">
-								<i class='fa fa-database icon-lg'/>
-								<h2 count-to="{{MysqlRecords}}" value="0" duration="1" class="number_counter"/>
-								<div class="clearfix"/>
-								<span>Number of Interfaces</span>
-							</div>
-						</div>
-					</div>
-
-
-					<div class="col-lg-15 col-md-4 col-xs-2 col-sm-6">
-						<div class="tile-counter bg-primary">
-							<div class="content">
-								<i class='fa fa-file-o'/>
-								<h2 count-to="{{missingRows}}" value="0" duration="1" class="number_counter"/>
-								<div class="clearfix"/>
-								<span>Generated files with matching count</span>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
-
-						<div style="text-align:-webkit-center">
-							<div class="chart" ui-jq="easyPieChart" ui-options="{ easing: 'easeOutBounce', barColor: 'orange', trackColor: '#f5f5f5', scaleColor: '#eaeaea', lineCap: 'square', lineWidth: 8, size: 130,animate: 1000 }" 
-										 > 
-
-								<!-- <div ui-jq="easyPieChart" class="chart"  ui-options="{ easing: 'easeOutBounce', barColor: 'orange', trackColor: '#f5f5f5', scaleColor: '#eaeaea', lineCap: 'square', lineWidth: 15, size: 130,animate: 1000 }"  data-percent={{percentage}}>{{percentage}}%</div> -->
-								<!-- data-percent={{percentage}} -->
-								<!-- ui-options="{ easing: 'easeOutBounce', barColor: 'orange', trackColor: '#f5f5f5', scaleColor: '#eaeaea', lineCap: 'square', lineWidth: 15, size: 130,animate: 1000,percent: {{percentage}} }" -->
-								<div>
-									<span class="text-primary percent">{{percentage}}%</span>
-								</div>
-
-							</div>
-							<h4 class="text-center margin-top-10 margin-bottom-10"  >Matching Count</h4>
-						</div>
-
-					</div>    
-
-
-					<div class="col-lg-6 col-xs-12 col-sm-12 col-md-6">         
-					</div>
-
-					<div class="clearfix"/>
-
-
-				</div>
-			</div>
-		</section>
+			
 
 
 
@@ -153,31 +93,37 @@
 
 											<table class="table table-striped" data-filter="#filter" class="table table-striped">
 												<thead>
-													<tr>
-														<th data-toggle="true">
+													<th data-toggle="true">
                                         Interface Name
 														</th>
 														<th>
-                                        Records in MYSQL
+                                        Error msg
 														</th>
-														<th data-hide="phone,tablet">
-                                        File Count
+														<th >
+                                        Key 1
 														</th>
-														<th data-hide="phone">
-                                        Status
+														<th >
+                                        Key 2
+														</th>
+														<th data-toggle="true">
+                                        Key 3
+														</th>
+														<th data-toggle="true">
+                                        Key 4
 														</th>
 													</tr>
 												</thead>
 
 
 												<tbody>
-													<tr    dir-paginate="x in mdRecordsArray | itemsPerPage:10" ng-click="openDetails(x)" data-user-id="{{x.Entry1}}">
+													<tr    dir-paginate="x in errorList | itemsPerPage:5"  data-user-id="{{x.Entry1}}">
+														<td>{{ifName}}</td>
 														<td>{{ x.Entry1 }}</td>
 														<td>{{ x.Entry2 }}</td>
 														<td>{{ x.Entry3 }}</td>
-														<td>
-															<span ng-class="{false : 'label label-danger', true : 'label label-success' } [x.Entry2==x.Entry3] " >{{ (x.Entry2!=x.Entry3) ? "Not Synced" : "Synced" }}</span>
-														</td>
+														<td>{{ x.Entry4 }}</td>
+														<td>{{ x.Entry5 }}</td>
+														
 
 
 													</tr>
@@ -190,17 +136,16 @@
 
 										<div>
 											<dir-pagination-controls
-							   max-size="10"
-							   direction-links="true"
-							   boundary-links="true"
-								 >
+												   max-size="10"
+												   direction-links="true"
+												   boundary-links="true"
+													 >
 											</dir-pagination-controls>
 
 										</div>
 									</div>
 
-								
-									
+
 								</div>    
 							</div>
 
