--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -87,7 +87,7 @@
 								<div class="row">
 
 									<div class="col-md-9 col-sm-12 col-xs-12">
-										<input id="filter" type="text" class="form-control" placeholder="Search" />
+										<input id="filter" type="text" class="form-control" placeholder="Search" ng-model="filterText"/>
 
 										<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
 
@@ -160,31 +160,31 @@
 														<th>
                                         Records in MYSQL
 														</th>
-														<th data-hide="phone,tablet">
+														<th >
                                         File Count
 														</th>
-														<th data-hide="phone">
+														<th >
                                         Status
 														</th>
 														
-														<th data-hide="phone">
-                                        Details
-														</th>
+														
 													</tr>
 												</thead>
 
 
 												<tbody>
-													<tr    dir-paginate="x in mdRecordsArray | itemsPerPage:10"  data-user-id="{{x.Entry1}}">
+													<tr    dir-paginate="x in mdRecordsArray | itemsPerPage:10 | filter: filterText "  data-user-id="{{x.Entry1}}">
 														<td>{{ x.Entry1 }}</td>
 														<td>{{ x.Entry2 }}</td>
 														<td>{{ x.Entry3 }}</td>
-														<td>
+														<td width="15%">
 															<span ng-class="{false : 'label label-danger', true : 'label label-success' } [x.Entry2==x.Entry3] " >{{ (x.Entry2!=x.Entry3) ? "Not Synced" : "Synced" }}</span>
+															<a ng-show="x.Entry2!=x.Entry3" style="cursor:pointer;" class="btn-circle btn-sm  btn-primary" ng-click="openDetails(x)" ><i class='fa fa-search-plus icon-4x' />
+
 														</td>
-														<td>
+														
 													
-														<a ng-show="x.Entry2!=x.Entry3" class="btn-circle btn-sm pull-right btn-primary" ng-click="openDetails(x)" ><i class='fa fa-search-plus icon-4x' /> </td>
+														 
 
 													</tr>
 												</tr>
