--- a/app/partials/Personal/PreviousDay_Customer.html
+++ b/app/partials/Personal/PreviousDay_Customer.html
@@ -102,7 +102,7 @@
 								<div class="row">
 
 									<div class="col-md-9 col-sm-12 col-xs-12">
-										<input id="filter" type="text" class="form-control" placeholder="Search" />
+										<input id="filter" type="text" class="form-control" placeholder="Search" ng-model="filterText" />
 
 										<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
 
@@ -146,7 +146,7 @@
 													</tr>
 												</thead>
 												<tbody>
-													<tr dir-paginate="x in mdRecordsArray|filter:{ Entry5 : filterResult }|itemsPerPage:10" >
+													<tr dir-paginate="x in mdRecordsArray| filter: filterText | filter:{ Entry5 : filterResult }|itemsPerPage:10" >
 														<td>{{ x.Entry2 }}</td>
 														<td>{{ x.Entry3 == "/CCEJ/MATMAS" ? "Material" : x.Entry3 }}</td>
 														<td>{{ x.Entry1 }}</td>
