--- a/app/partials/Personal/PricingMD.html
+++ b/app/partials/Personal/PricingMD.html
@@ -87,7 +87,7 @@
                 <div class="row">
 				
                     <div class="col-md-9 col-sm-12 col-xs-12">
-                        <input id="filter" type="text" class="form-control" placeholder="Search" />
+                        <input id="filter" type="text" class="form-control" placeholder="Search" ng-model="filterText" />
 						
 						<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
 						
@@ -172,7 +172,7 @@
 							
                             
 							<tbody>
-                                <tr    dir-paginate="x in mdRecordsArray | itemsPerPage:10" >
+                                <tr    dir-paginate="x in mdRecordsArray | filter: filterText | itemsPerPage:10" >
                                     <td>{{ x.Entry1 }}</td>
 									<td>{{ x.Entry2 }}</td>
 									<td>{{ x.Entry3 }}</td>
