--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -64,9 +64,17 @@
                 </div>
 				<div class="clearfix"></div>
 				
+				<div class="row">
+                    <div  class="col-md-8 col-sm-12 col-xs-12 col-md-offset-2"  >
+                     <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" 
+					 ng-if="showChart" chart-options="myOptions" chart-legend="true"  ></canvas>
+                    </div>
+                </div>
 				
 				
 				<div style="text-align:-webkit-center">
+				
+				
 				
 				
 				<table class="table table-striped" ui-jq="footable" data-filter="#filter" data-page-size="10" class="table table-striped">
@@ -78,12 +86,7 @@
 									<th data-toggle="true">
                                         SO Number
                                     </th>
-                                    <th>
-                                        Plant
-                                    </th>
-                                    <th data-hide="phone,tablet">
-                                        Line Item Number
-                                    </th>
+                                    
 									<th data-hide="phone,tablet">
                                         Creation Date
                                     </th>
@@ -102,11 +105,20 @@
                                 <tr  ng-repeat="x in recordsOfToday " >
                                     <td>{{ x.Entry9 }}</td>
 									<td>{{ x.Entry7 }}</td>
-									<td>{{ x.Entry5 }}</td>
-									<td>{{ x.Entry3 }}</td>
+									
 									<td>{{ x.Entry2 }}</td>
 									<td>{{ x.Entry1 }}</td>
-									<td>{{ x.Entry8 }}</td>
+									<td><span ng-class="{0 : 'label label-success', 1 : 'label label-warning' , 2 : 'label label-success' , 
+											3 : 'label label-danger' , 4 : 'label label-success' , 5 : 'label label-danger' , 6 : 'label label-success' } [x.Entry8] " >
+										{{  x.Entry8 == 0 ? "Created In Bolton" : 
+											x.Entry8 == 1 ? "In Progress" :
+											x.Entry8 == 2 ? "Sent To SAP" :
+											x.Entry8 == 3 ? "Error-Sent To SAP" :
+											x.Entry8 == 4 ? "Processed" :
+											x.Entry8 == 5 ? "Not Processed" :
+											"Idoc Released" 
+										}}
+									</td>
 									
 
 									
@@ -123,6 +135,86 @@
                                 </tr>
                             </tfoot>
                         </table>
+						
+						<!--
+						<table class="table table-striped" data-page-size="10" class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th data-toggle="true">
+                                        Source
+                                    </th>
+									<th data-toggle="true">
+                                        SO Number
+                                    </th>
+									<th >
+                                        1
+                                    </th>
+                                    <th>
+                                        2
+                                    </th>
+                                    <th >
+                                        3
+                                    </th>
+									<th >
+                                        4
+                                    </th>
+									<th >
+                                        5
+                                    </th>
+									
+                                    <th >
+                                        6
+                                    </th>
+									<th >
+                                        7
+                                    </th>
+                                </tr>
+                            </thead>
+							
+                            
+							<tbody>
+                                <tr  ng-repeat="x in recordsOfToday " >
+                                    <td>{{ x.Entry9 }}</td>
+									<td>{{ x.Entry7 }}</td>
+									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=1] " >{{ x.Entry8 >= 1 ? "Passed" : "Problem" }}</span>
+									</td>
+									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=2] " >{{ x.Entry8 >= 2 ? "Passed" : "Problem" }}</span>
+									</td>
+									
+									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=3] " >{{ x.Entry8 >= 3 ? "Passed" : "Problem" }}</span>
+									</td>
+									
+									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=4] " >{{ x.Entry8 >= 4 ? "Passed" : "Problem" }}</span>
+									</td>
+									
+									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=5] " >{{ x.Entry8 >= 5 ? "Passed" : "Problem" }}</span>
+									</td>
+									
+									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=6] " >{{ x.Entry8 >= 6 ? "Passed" : "Problem" }}</span>
+									</td>
+									
+									<td><span ng-class="{'false' : 'label label-danger', 'true' : 'label label-success' } [x.Entry8>=7] " >{{ x.Entry8 >= 7 ? "Passed" : "Problem" }}</span>
+									</td>
+									
+									
+									
+
+									
+                                </tr>
+                                </tr>
+                                
+                            </tbody>
+							
+                            <tfoot class="hide-if-no-paging">
+                                <tr>
+                                    <td colspan="10" class="text-center">
+                                        <ul class="pagination"></ul>
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
+						
+						-->
 				
 				
 				</div>
@@ -130,12 +222,7 @@
 				<div class="clearfix"></div>
 				<div class="clearfix"></div>
 				<div class="clearfix"></div>
-				<div class="row">
-                    <div  class="col-md-8 col-sm-12 col-xs-12 col-md-offset-2"  >
-                     <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" 
-					 ng-if="showChart" chart-options="myOptions" chart-legend="true"  ></canvas>
-                    </div>
-                </div>
+				
 				
             </div>
 			
