--- a/app/partials/Personal/TruckStock.html
+++ b/app/partials/Personal/TruckStock.html
@@ -1,116 +1,204 @@
 <div class='content-wrapper' ng-init="app.settings.pagetitle = 'Truck Stock';">
-    <div class="col-lg-12" ng-controller="TruckStockController">
-        
-					
-	
-	
-	<div class="col-lg-12">
-        <section class="box ">
-		
-            <header class="panel_header">
-                <h2 class="title pull-left">Sales Order</h2>
-                <div class="actions panel_actions pull-right">
-                    <i class="box_toggle material-icons">expand_more</i>
-                    <i class="box_setting material-icons" ng-click="section_modal()">mode_edit</i>
-                    <i class="box_close material-icons">close</i>
-                </div>
-            </header>
-            <!--
-			<div class="content-body">
-                <div class="row">
-                    <div class="col-md-8 col-sm-12 col-xs-12 col-md-offset-2" ng-controller="DataTablesCtrl">
-                        <table class="table table-responsive table-condensed table-striped">
-                            <tr>
-                                <th ng-repeat="label in labels">{{label}}</th>
-                            </tr>
-                            <tr ng-repeat="dataSet in data">
-                                <td ng-repeat="set in dataSet track by $index"><span style="text-align: right;">{{data[$parent.$index][$index]}}</span></td>
-                            </tr>
-                        </table>
-						
-						
-                        <canvas id="tables" class="chart chart-line" chart-data="data" chart-labels="labels" chart-colours="colours"></canvas>
-                        <div class="clearfix"></div>
-                        <button type="button" class="btn btn-primary pull-left margin-top-15" ng-click="randomize()">Randomize</button>
-                    </div>
-                </div>
-            </div>
-			-->
-			<div class="content-body">
-                
-				<div class="clearfix"></div>
+	<div class="col-lg-12" ng-controller="TruckStockController" ng-init='load()' >
+
+
+
+
+		<div class="col-lg-12">
+			
+
+
+
+
+		<div class="col-lg-12">
+			<section class="box ">
+				<header class="panel_header">
+					<h2 class="title pull-left">Master Data</h2>
+					<div class="actions panel_actions pull-right">
+						<i class="box_toggle material-icons">expand_more</i>
+
+					</div>
+				</header>
 				
-				<div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
-                        <table class="table table-striped" data-filter="#filter" class="table table-striped">
+				
+				
+				<div class="content-body padding-bottom-15">
+					<div class="row">
+					
+					
+					<label class="form-label" for="field-1">Select Date</label>
+                            <div class="input-group" inputgroup>
+                                <input type="text" class="form-control datepicker" max-date="maxDate" datepicker-popup="yyyy/MM" ng-model="dt" is-open="dtpick.opened" datepicker-mode="'month'" ng-required="true" close-text="Close" ng-click="open($event,'opened')" 
+								ng-change="getMonth()" />
+                                <span class="input-group-addon" ng-click="open($event,'opened')"><i class="fa fa-calendar" style="color: #999;"></i></span>
+                            </div>
+							
+							
+							
+							
+							
+							<!--
+							<div style="display:inline-block;">
+								<uib-datepicker ng-model="todayDate" max-date="maxDate" show-weeks="true" datepicker-mode="'month'" ng-change="CallWebService()" class="well well-sm"  />
+							</div>
+							-->
+					
+					
+						<div class="col-md-12 col-sm-12 col-xs-12">
+
+							<div class="content-body padding-bottom-0">
+								<div class="row">
+
+									<div class="col-md-9 col-sm-12 col-xs-12">
+										
+
+										<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
+
+									</div>
+
+									<div class="btn-group margin-bottom-10 margin-right-15">
+										<label class="btn btn-primary" ng-click="FilterAll()" >All</label>
+										<label class="btn btn-success" ng-click="FilterOnlyCorrected()"  >No Correction</label>
+										<label class="btn btn-warning" ng-click="FilterOnlyNotCorrected()" >Corrected</label>
+									</div>
+									<div class="btn-group margin-bottom-10 margin-left-15">
+										<label class="btn btn-primary" ng-click="FilterAll()" >All</label>
+										<label class="btn btn-success" ng-click="FilterOnlyCorrected()"  >No Correction</label>
+										<label class="btn btn-warning" ng-click="FilterOnlyNotCorrected()" >Corrected</label>
+									</div>
+
+
+									<div class="clearfix"/>
+									<br>
+
+										<a class="btn btn-circle btn-lg pull-right btn-success" ng-click="exportData()" >CSV    <i class='fa fa-file-excel-o icon-4x' />
+										</a>
+
+										<div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
+
+											<!--
+						<table class="table table-striped" ui-jq="footable" data-filter="#filter" data-page-size="10" class="table table-striped">
                             <thead>
                                 <tr>
                                     <th data-toggle="true">
-                                        Idoc Number
+                                        Interface Name
                                     </th>
                                     <th>
-                                        Type
+                                        Records in MYSQL
                                     </th>
                                     <th data-hide="phone,tablet">
-                                        Date
-                                    </th>
-                                    <th data-hide="phone,tablet" >
-                                        MATNR
+                                        File Count
                                     </th>
                                     <th data-hide="phone">
                                         Status
                                     </th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr dir-paginate="x in mdRecordsArray| filter: filterText | filter:{ Entry5 : filterResult }|itemsPerPage:10 " >
-                                    <td>{{ x.Entry2 }}</td>
-									<td>{{ x.Entry3 == "/CCEJ/MATMAS" ? "Material" : x.Entry3 }}</td>
-									<td>{{ x.Entry1 }}</td>
-									<td>{{ x.Entry4 }}</td>
-									<td><span ng-class="{1 : 'label label-danger', 0 : 'label label-success' } [x.Entry5] " >{{ x.Entry5 == 1 ? "Not Synced" : "Synced" }}</span></td>
+							
+                            
+							<tbody>
+                                <tr  ng-repeat="x in mdRecordsArray " >
+                                    <td>{{ x.Entry1 }}</td>
+									<td>{{ x.Entry2 }}</td>
+									<td>{{ x.Entry3 }}</td>
+									<td><span ng-class="{false : 'label label-danger', true : 'label label-success' } [x.Entry2==x.Entry3] " >{{ (x.Entry2!=x.Entry3) ? "Not Synced" : "Synced" }}</span></td>
+
+									
+                                </tr>
                                 </tr>
                                 
                             </tbody>
-							<tfoot class="hide-if-no-paging">
+							
+                            <tfoot class="hide-if-no-paging">
                                 <tr>
-                                   
-                               </tr>
-                           </tfoot>
-					
+                                    <td colspan="10" class="text-center">
+                                        <ul class="pagination"></ul>
+                                    </td>
+                                </tr>
+                            </tfoot>
                         </table>
-						<div>
-						<dir-pagination-controls
+						-->
+
+											<table class="table table-striped" data-filter="#filter" class="table table-striped">
+												<thead>
+													<tr>
+														<th data-toggle="true">
+                                        Date
+														</th>
+														<th>
+                                        Plant JW71
+														</th>
+														<th >
+                                        File JW64
+														</th>
+														<th >
+                                        To New Hokan
+														</th>
+														
+														<th >
+                                        Correction
+														</th>
+														
+														
+													</tr>
+												</thead>
+
+
+												<tbody>
+													<tr    dir-paginate="x in truckStockList | filter:{ Entry6 : filterResult } | itemsPerPage:10  "  data-user-id="{{x.Entry1}}">
+														<td>{{ x.Entry1 }}</td>
+														<td>{{ (x.Entry2==1) ? "Received" : "Not Received" }}</td>
+														<td>{{ (x.Entry3==1) ? "Received" : "Not Received" }}</td>
+														<td>
+															<span ng-class="{false : 'label label-danger', true : 'label label-success' } [x.Entry4==1] " >
+														{{ (x.Entry4==1) ? "Sent" : "Not Sent" }}
+														</td>
+														<td>
+															<span ng-class="{false : 'label label-warning', true : 'label label-success' } [x.Entry6==0] " >
+														{{ (x.Entry6==0) ? "No Correction" : "Corrected" }}
+														</td>
+														
+														
+														
+													
+														 
+
+													</tr>
+												</tr>
+
+											</tbody>
+
+
+										</table>
+
+										<div>
+											<dir-pagination-controls
 							   max-size="10"
 							   direction-links="true"
 							   boundary-links="true"
-								> <!-- auto-hide="true" --> 
-							</dir-pagination-controls>
+								 >
+											</dir-pagination-controls>
+
+										</div>
+									</div>
+
+								
+									
+								</div>    
 							</div>
-                    </div>
-				
-				
-				<div class="clearfix"></div>
-				<div class="clearfix"></div>
-				<div class="clearfix"></div>
-				<div class="clearfix"></div>
-				
-				
-            </div>
-			
-                
-            
-			
-			
-			
-			
-        </section>
-    </div>
-	
-	
-	
-					
-					
-                    
-             
+
+
+
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
+	</div>
+</div>
+
+
+
+
 </div>
 </div>	
