--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -44,6 +44,19 @@
                                     </ul>
                                 </li>
 								
+								<li ui-sref-active="active">
+                                    <a>MD pricing<span class="arrow material-icons">keyboard_arrow_right</span></a>
+                                    <ul class="wraplist wraplist-sub sub-menu dk" >
+
+                                        <li ui-sref-active="active">
+                                            <a ui-sref="app.tables.pricing" >Daily</a>
+                                        </li>
+                                        <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.pricingPreviousDay">Previous Day</a>
+                                </li>
+                                    </ul>
+                                </li>
+								
 								<!--
 								<li ui-sref-active="active">
                                     <a>MD Customers<span class="arrow material-icons">keyboard_arrow_right</span></a>
@@ -67,11 +80,13 @@
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.customer1" >MD Customer</a>
                                 </li>
-								-->
+								
 								
 								<li ui-sref-active="active">
                                             <a ui-sref="app.tables.pricing" >Pricing</a>
                                         </li>
+										
+										-->
 								
 								<li ui-sref-active="active">
                                     <a ui-sref="app.dashboard">MD Equipments</a>
