--- a/app/partials/Personal/ShipmentIdocs.html
+++ b/app/partials/Personal/ShipmentIdocs.html
@@ -134,7 +134,7 @@
                             <tbody>
                                 <tr dir-paginate="x in mdRecordsArray| filter: filterText | filter:{ Entry5 : filterResult }|itemsPerPage:10 " >
                                     <td>{{ x.Entry2 }}</td>
-									<td>{{ x.Entry3 == "/CCEJ/MATMAS" ? "Material" : x.Entry3 }}</td>
+									<td>{{ x.Entry3 == "/CCEJ/SD_BL_PROF" ? "Shipment" : x.Entry3 }}</td>
 									<td>{{ x.Entry1 }}</td>
 									<td>{{ x.Entry4 }}</td>
 									<td><span ng-class="{1 : 'label label-danger', 0 : 'label label-success' } [x.Entry5] " >{{ x.Entry5 == 1 ? "Not Synced" : "Synced" }}</span></td>
