fix no data table + icons

--- a/app/partials/Personal/CustomerMD.html
+++ b/app/partials/Personal/CustomerMD.html
@@ -136,13 +136,14 @@
 									<td>{{ x.Entry4 }}</td>
 									<td><span ng-class="{1 : 'label label-danger', 0 : 'label label-success' } [x.Entry5] " >{{ x.Entry5 == 1 ? "Not Synced" : "Synced" }}</span></td>
                                 </tr>
+								<tr >
+													<td ng-show="mdRecordsArray.length == 0" colspan="20" style="text-align:center">
+														   No Data             
+													</td>
+												</tr>
                                 
                             </tbody>
-							<tfoot class="hide-if-no-paging">
-                                <tr>
-                                   
-                               </tr>
-                           </tfoot>
+							
 					
                         </table>
 						<div>
