--- a/app/partials/Personal/PreviousDay_Customer.html
+++ b/app/partials/Personal/PreviousDay_Customer.html
@@ -157,11 +157,11 @@
 													</tr>
 
 												</tbody>
-												<tfoot class="hide-if-no-paging">
-													<tr>
-
-													</tr>
-												</tfoot>
+												<tr >
+													<td ng-show="mdRecordsArray.length == 0" colspan="20" style="text-align:center">
+														   No Data             
+													</td>
+												</tr>
 
 											</table>
 											<div>
