--- a/app/partials/Personal/Settlement.html
+++ b/app/partials/Personal/Settlement.html
@@ -176,7 +176,12 @@
 													
 														 
 
-													</tr>
+													
+												</tr>
+												<tr >
+													<td ng-show="SettlementList==null" colspan="20" style="text-align:center">
+														   No Data             
+													</td>
 												</tr>
 
 											</tbody>
