--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -11,7 +11,7 @@
 	
 	<li href class="auto"> 
                             <a href="javascript:;">
-                                <i class="material-icons">apps</i>
+                                <i class="material-icons">view_agenda</i>
                                 <span class="title">Master Data</span>
                                 <span class="arrow material-icons">keyboard_arrow_right</span>
                             </a>
@@ -129,7 +129,7 @@
 	
 	<li href class="auto"> 
                             <a href="javascript:;">
-                                <i class="material-icons">apps</i>
+                                <i class="material-icons">content_paste</i>
                                 <span class="title">Sales order</span>
                                 <span class="arrow material-icons">keyboard_arrow_right</span>
                             </a>
@@ -159,7 +159,7 @@
 	
 	<li href class="auto"> 
                             <a href="javascript:;">
-                                <i class="material-icons">apps</i>
+                                <i class="material-icons">local_shipping</i>
                                 <span class="title">Truck Stock</span>
                                 <span class="arrow material-icons">keyboard_arrow_right</span>
                             </a>
@@ -191,7 +191,7 @@
 	
 	<li href class="auto"> 
                             <a href="javascript:;">
-                                <i class="material-icons">apps</i>
+                                <i class="material-icons">local_shipping</i>
                                 <span class="title">Shipment</span>
                                 <span class="arrow material-icons">keyboard_arrow_right</span>
                             </a>
