--- a/app/partials/Personal/TruckStock.html
+++ b/app/partials/Personal/TruckStock.html
@@ -53,11 +53,12 @@
 									<div class="col-md-9 col-sm-12 col-xs-12">
 										
 
-										<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
+										 <input type="text" ng-model="search" class="form-control" placeholder="Search"> 
 
 									</div>
+									<br></br>
 
-									<div class="btn-group margin-bottom-10 margin-right-15">
+									<div class="btn-group margin-bottom-10 margin-right-15" style="float:left" >
 										<label class="btn btn-primary" ng-click="FilterAll()" >All</label>
 										<label class="btn btn-success" ng-click="FilterOnlyNotCorrected()"  >No Correction</label>
 										<label class="btn btn-warning" ng-click="FilterOnlyCorrected()" >Corrected</label>
@@ -120,7 +121,7 @@
                         </table>
 						-->
 
-											<table class="table table-striped" data-filter="#filter" class="table table-striped">
+											<table class="table table-striped" class="table table-striped">
 												<thead>
 													<tr>
 														<th data-toggle="true">
@@ -146,7 +147,7 @@
 
 
 												<tbody>
-													<tr    dir-paginate="x in truckStockList  | filter:{ Entry4 : filterStatus } | itemsPerPage:10  "  data-user-id="{{x.Entry1}}">
+													<tr    dir-paginate="x in truckStockList  | filter:search | filter:{ Entry4 : filterStatus } | itemsPerPage:10  "  data-user-id="{{x.Entry1}}">
 														<td>{{ x.Entry1 }}</td>
 														<td>{{ (x.Entry2==1) ? "Received" : "Not Received" }}</td>
 														<td>{{ (x.Entry3==1) ? "Received" : "Not Received" }}</td>
