--- a/app/partials/Personal/MasterDataMaterial.html
+++ b/app/partials/Personal/MasterDataMaterial.html
@@ -1,4 +1,4 @@
-<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Compare SAP & MySQL';">
+<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Compare SAP & MySQL Her';">
     <div class="col-lg-12" ng-controller="MasterDataController">
         
 					
