--- a/app/partials/Personal/Settlement.html
+++ b/app/partials/Personal/Settlement.html
@@ -179,7 +179,7 @@
 													
 												</tr>
 												<tr >
-													<td ng-show="SettlementList==null" colspan="20" style="text-align:center">
+													<td ng-show="SettlementList.length == 0" colspan="20" style="text-align:center">
 														   No Data             
 													</td>
 												</tr>
