--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -49,11 +49,15 @@
                                     <ul class="wraplist wraplist-sub sub-menu dk" >
 
                                         <li ui-sref-active="active">
-                                            <a ui-sref="app.tables.pricing" >Daily</a>
+                                            <a ui-sref="app.tables.pricing" >Daily (SAP-MySQL)</a>
                                         </li>
                                         <li ui-sref-active="active">
-                                    <a ui-sref="app.tables.pricingPreviousDay">Previous Day</a>
+                                    <a ui-sref="app.tables.pricingPreviousDay">Previous Day (SAP-MySQL)</a>
                                 </li>
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.pricingBolton">Compare With Bolton</a>
+                                </li>
+								
                                     </ul>
                                 </li>
 								
