--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -58,6 +58,10 @@
                                     <a ui-sref="app.tables.pricingBolton">Compare With Bolton</a>
                                 </li>
 								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.priceValidation">Price Validation</a>
+                                </li>
+								
                                     </ul>
                                 </li>
 								
